lab7/backend/backend-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: lab7
spec:
  podSelector:
    matchLabels:
      role: backend

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - ports:
    - protocol: TCP
      port: 80

  egress:
  
  - to:
    - podSelector:
        matchLabels:
          app:  redis
    ports:
    - protocol: TCP
      port: 6379

  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
